<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Switcher_SocialNetworkManager</string>
    <string name="str_Switcher">Switcher</string>
    <string name="str_plus">+</string>
    <string name="str_connexion">Connexion</string>
    <string name="str_about"> A propos</string>
    <string name="str_signal_prob"> Nous signaler un problème</string>
    <string name="str_contact_us"> Nous contacter</string>
    <string name="str_disconnect"> Se déconnecter</string>
    <string name="str_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.</string>
    <string name="str_todo">TODO</string>
    <string name="str_retour">Retour</string>
    <string name="str_publier">Publier</string>
    <string name="str_logout">Se déconnecter</string>
    <string name="str_about_text"> Cette application a été developpé dans le cadre d\'un projet
        étudiant de l\'EPF Montpellier.
        \nRéalisé par Charlotte Blanc, Damien Ferrero, Victor Moussally et Paul Saillard.
        \n\n\n "The Switcher : Social Network Manager", tous droits réservés"</string>
    <string name="str_whatprob">Quel est votre problème ?</string>
    <string name="str_signal_prob_short">Signaler un problème</string>
    <string name="str_what_to_say">Que souhaitez vous nous dire ?</string>

</resources>
