<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_topBar3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#CEA07F"
        android:text="@string/str_Switcher"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_topBar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_about"
                android:text="@string/str_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E605123C"
                android:backgroundTintMode="src_atop"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_signal_prob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E605123C"
                android:backgroundTintMode="src_atop"
                android:text="@string/str_signal_prob"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E605123C"
                android:backgroundTintMode="src_atop"
                android:text="@string/str_contact_us"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E605123C"
                android:backgroundTintMode="src_atop"
                android:text="@string/str_disconnect"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>